[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.dependencies]
actix-web = "4"
confik = "0.11"
dotenvy = "0.15"
env_logger = "0.10.0"
serde = { version = "1", features = ["derive"] }
redis = { version = "0.25", features = ["tokio-comp", "connection-manager"] }
fred = { version = "9.2.1", features = ["subscriber-client"] }
sqlx = { version = "0.8.2", features = ["postgres", "runtime-tokio"] }
