[package]
name = "engine"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono.workspace = true
fred.workspace = true
rust_decimal.workspace = true
rust_decimal_macros.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
uuid.workspace = true

redis = { path = "../redis" }